assets/css/style.css
/* --------------- Breakpoints ------*/



/* --------------- Colours ------*/

body {
    background-color: 
}


  


/* --------------- Heading ------*/

header {
    margin: auto;
    width: 90%;
    
}

.nav-bar {
    padding: 20px;
   
}

.logo {
    align-self: center;
}
.logo h1 {
    font-family: "Acme", sans-serif;
    font-weight: 400;
    font-style: normal
    font-size: 2.4rem;
    color: #525252;
    text-align: center;
    letter-spacing: .1rem;
}

@media (max-width: 1100px) {
    .logo h1 {
        font-size: 2.15rem;
    }
}

.logo h1:hover {
    color: #fafafa;
    text-shadow: -1px 0 purple, 0 1px purple, 1px 0 purple, 0 -1px purple;
}

.logo:hover {
    text-decoration: none;
}
/* --------------- Nav bar ------*/


.menucontainer {
    font-size: 0;
    background-color: rgb(128, 0, 128);
    border-radius: 10px;
    align-self: center;
}

#nav {
    margin: 0;
    text-align: center;
    width: 100%;
}

#nav .active a span {
    color: rgb(72, 7, 72) ;
    background: rgb(182, 116, 182);
}

#nav .active a span:hover {
    background: rgb(182, 116, 182);
}

#nav li {
    font-size: 30px;
    text-align: center;
    height: 50px;
    
}

#nav li a span:hover {
    background-color: rgb(72, 7, 72);
}



.menuitem {
    
    text-align: center;
    padding: 0;
    width: 33%;
    margin: auto;
}

.menuitem a {
    width: 100%;
    text-decoration: none;
    color: white;
    text-align: center;

}
.menuitem span {
    display: block;
    width: 100%;
    text-align: center;
    font-weight: 300;
    font-size: 1.3rem;
    letter-spacing: 2px;
    white-space: nowrap;
}

.list-inline {
    list-style: none;
}



.list-inline-item:not(:last-child) {
    margin: 0;
}



/* --------------- Hero Carousel ------*/
section {
    margin-top: 20px;
}
/*-----
.gallery {
    background: url(../images/redmoon-heroimage.jpg);
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    min-height: 550px;
    
}
    ---*/

.carousel-container {
    width: 90%;
    margin: auto;
    position: relative;
    text-align: center;
    color: white;
  }


.carousel-inner {
    max-height: 500px;
    border-radius: 15px;
    position: relative;
}

/* --------------- Carousel Welcome Text ------*/

.welcome-text {
    position: absolute;
    top: 40%;
    left: 50%;
    transform: translate(-50%, -50%);
    background-color: rgba(182, 116, 182, 0.7);
    padding: 15px;
    border-radius: 15px;
  }

  .welcome-text a {
    text-decoration: none;
    color: rgb(72, 7, 72);

  }

  @media (max-width: 780px) {
    .welcome-text h2 {
        font-size: 1.2rem;
    }
}

@media (max-width: 370px) {
    .welcome-text h2 {
        font-size: 1rem;
    }
    .welcome-text p {
        font-size: .8rem;
    }
}

/* --------------- Moon flip cards ------*/


/* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
.flip-card {
    background-color: transparent;
    width: auto;
    height: 100%;
    perspective: 1000px; /* Remove this if you don't want the 3D effect */
    border-radius: 50%;
  }
  
  /* This container is needed to position the front and back side */
  .flip-card-inner {
    position: relative;
    width: 100%;
    height: 100%;
    text-align: center;
    transition: transform 0.8s;
    transform-style: preserve-3d;
    border-radius: 50%;
  }
  
  /* Do an horizontal flip when you move the mouse over the flip box container */
  .flip-card:hover .flip-card-inner {
    transform: rotateY(180deg);
  }
  
  /* Position the front and back side */
  .flip-card-front, .flip-card-back {
    position: absolute;
    width: 100%;
    height: 100%;
    -webkit-backface-visibility: hidden; /* Safari */
    backface-visibility: hidden;
    border-radius: 50%;
  }
  
  /* Style the front side (fallback if image is missing) */
  .flip-card-front {
    background-color: #bbb;
    color: black;
  }
  
  /* Style the back side */
  .flip-card-back {
    background-color: rgb(72, 7, 72);
    color: white;
    transform: rotateY(180deg);
    align-content: space-around;
    padding-right: 20px;
    padding-left: 20px;
  }

  .flip-card-back p {
    font-size: .9rem;
  }

.moon-container {
    width: 90%;
    margin: 40px auto 40px auto;

} 

.moon-container-item {
    padding: 15px;
    
}
/*
.whole-moon {
    background: url(../images/wholemoon.jpg);
}

.waxing-moon {
    background: url(../images/waxingmoon.jpg);
}

.half-moon {
    background: url(../images/halfmoon.jpg);
}

.crescent-moon {
    background: url(../images/crescentmoon.jpg);
}*/

.whole-moon, .waxing-moon, .half-moon, .crescent-moon {
    overflow: hidden;
    width: auto;
    aspect-ratio: 1;
}

/* --------------- About page ------*/

.fact-container {
    width: 80%;
    margin: 20px auto 20px auto;
}

.fact-inner {
    min-height: 300px;
    padding: 30px;
    background-color: rgba(128, 0, 128, 0.5);
    border-radius: 15px;
}

.fact-inner p {
 text-align: justify;
}

.fact-2, .fact-4 {
    text-align: right;
}


.fact-1-image-container, .fact-2-image-container, .fact-3-image-container, .fact-4-image-container, .fact-5-image-container {
    align-content: space-around;
}


.fact-1-image {
    background: url(../images/fact-1-image.jpeg);
}

.fact-2-image {
    background: url(../images/fact-2-image.jpeg);
}

.fact-3-image {
    background: url(../images/fact-3-image.jpeg);
}

.fact-4-image {
    background: url(../images/fact-4-image.jpeg);
}

.fact-5-image {
    background: url(../images/fact-5-image.jpeg);
}

.fact-1-image, .fact-2-image, .fact-3-image, .fact-4-image, .fact-5-image {
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    width: auto;
    aspect-ratio: 1;
    margin: 15px;
}

/* --------------- Sign up Form ------*/

.sign-up-form {
    width: 60%;
    margin: auto;
    background-color: rgba(128, 0, 128, 0.5);
    padding: 15px;
    border-radius: 15px;
}

.form-title, .form-info {
    text-align: center;

}

.form-button {
    background-color: (72, 7, 72);
    border: white solid 1px;
    margin: 10px;


}

/* --------------- Success page ------*/

.success-message {
    background-color: #1b1b1b;
    color:#fafafa;
    margin: auto;
    min-height: 350px;
    text-align: center;
    padding-top: 50px;
    border-radius: 15px;

}

.moon-illustration-image {
    background: url(../images/planets-illustration.jpeg);
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    width: auto;
    height: 100%;
    aspect-ratio: 1;
    margin: 50px;
}

/* --------------- Footer ------*/

footer {
    color: purple;
    min-height: 120px;
    margin: 0;
    
}

.copyright {
    padding-top: 20px;
}

.list-inline-item {
    padding: 10px;
}

.social-links {
    padding-bottom: 15px;
    text-align: center;
}

.social-links li a i {
    width: 32px;
    height: 32px;
    padding: 12px 0 12px;
    border-radius: 25%;
    font-size: 14px;
    line-height: 7px;
    text-align: center;
    color: #fafafa;
    background: purple;
    transition: all 0.35s ease-in-out;
    -moz-transition: all 0.35s ease-in-out;
    -webkit-transition: all 0.35s ease-in-out;
    -o-transition: all 0.35s ease-in-out;
}

.social-links li a i:hover {
    background-color: purple
}
#footer-details {
    padding: 20px;
} 

